Remove attempt to fix view code studio icon not showing for now

--- a/lessons/static/css/commonlesson.css
+++ b/lessons/static/css/commonlesson.css
@@ -752,6 +752,8 @@ th a:link, th a:visited, th a:hover, th a:active {
 }
 
 .level-link:after {
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
     content: "\f08e";
 }
 
